--- a/moveit_planning/package.xml
+++ b/moveit_planning/package.xml
@@ -52,16 +52,24 @@
 
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
-  <build_depend>sensor_msgs</build_depend>
-  <build_depend>std_msgs</build_depend>
   <build_depend>cv_bridge</build_depend>
   <build_depend>opencv2</build_depend>
+  <build_depend>moveit_visual_tolls</build_depend>
+  <build_depend>moveit_core</build_depend>
+  <build_depend>moveit_ros_planning_interface</build_depend>
+
 
   <exec_depend>rospy</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>cv_bridge</exec_depend>
   <exec_depend>opencv2</exec_depend>
+  <exec_depend>tf2_ros</exec_depend>
+  <exec_depend>moveit_visual_tolls</exec_depend>
+  <exec_depend>moveit_core</exec_depend>
+  <exec_depend>moveit_commander</exec_depend>
+  <exec_depend>moveit_ros_planning_interface</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
