--- a/moveit_planning/package.xml
+++ b/moveit_planning/package.xml
@@ -57,6 +57,7 @@
   <build_depend>moveit_visual_tolls</build_depend>
   <build_depend>moveit_core</build_depend>
   <build_depend>moveit_ros_planning_interface</build_depend>
+  <build_depend>tf2_ros</build_depend>
 
 
   <exec_depend>rospy</exec_depend>
