modified rrtMult algorithm

--- a/rrt-simulator-master/.vscode/settings.json
+++ b/rrt-simulator-master/.vscode/settings.json
@@ -6,6 +6,7 @@
         "ostream": "cpp",
         "qmainwindow": "cpp",
         "qwidget": "cpp",
-        "qline": "cpp"
+        "qline": "cpp",
+        "iostream": "cpp"
     }
 }
