finished new algorithm in Qt environment

--- a/rrt-simulator-master/.vscode/settings.json
+++ b/rrt-simulator-master/.vscode/settings.json
@@ -7,6 +7,10 @@
         "qmainwindow": "cpp",
         "qwidget": "cpp",
         "qline": "cpp",
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "*.tcc": "cpp",
+        "istream": "cpp",
+        "list": "cpp",
+        "unordered_map": "cpp"
     }
 }
