Time calculation and automated obstacle generation (Qt)

--- a/rrt-simulator-master/.vscode/settings.json
+++ b/rrt-simulator-master/.vscode/settings.json
@@ -12,6 +12,9 @@
         "istream": "cpp",
         "list": "cpp",
         "unordered_map": "cpp",
-        "random": "cpp"
+        "random": "cpp",
+        "qelapsedtimer": "cpp",
+        "chrono": "cpp",
+        "qtimer": "cpp"
     }
 }
