add test result

--- a/rrt-simulator-master/.vscode/settings.json
+++ b/rrt-simulator-master/.vscode/settings.json
@@ -15,6 +15,7 @@
         "random": "cpp",
         "qelapsedtimer": "cpp",
         "chrono": "cpp",
-        "qtimer": "cpp"
+        "qtimer": "cpp",
+        "ctime": "cpp"
     }
 }
