Finished rrtMultConnect algorithm ALL algorithm is donegit commit --help

--- a/moveit_planning/CMakeLists.txt
+++ b/moveit_planning/CMakeLists.txt
@@ -314,5 +314,6 @@ target_link_libraries(plan_rrt
   sep_rrtPlanner
   rrtConnectPlanner
   bi_rrtMultPlanner
+  rrtMultConnect
   ${catkin_LIBRARIES}
 )
