--- a/kuka_kr6_gazebo/package.xml
+++ b/kuka_kr6_gazebo/package.xml
@@ -56,6 +56,6 @@
   <export>
     <!-- Other tools can request additional information be placed here -->
     <gazebo_ros                             
-        gazebo_model_path="${prefix}/.." /> 
+        gazebo_model_path="${prefix}/models" /> 
   </export>
 </package>
